Fix text align in empty-validations-advice

--- a/app/assets/stylesheets/tabs/_content_type_editor.css.sass
+++ b/app/assets/stylesheets/tabs/_content_type_editor.css.sass
@@ -248,9 +248,10 @@
   .advice
     width: 60%
     margin: 0
+    .dropdown-menu
+      text-align: left
   .add-field-button
     margin-top: 1em
-
   .type-menu
     width: 500px
     white-space: normal
